@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Added fromkeys method to dict
+
  * Added builtin sorted() function
 
  * Optimized 'for x in y' loops
